# bacchus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: release.yml
plugin/: README.md
plugin/.claude-plugin/: config.json
plugin/commands/: agent.md  cancel.md  orchestrate.md
plugin/hooks/: hooks.json  stop-prompt.md  stop-router.sh
plugin/scripts/: session.sh
plugin/skills/: context.md  planner.md
scripts/: install.sh  uninstall.sh
skills/: SKILL.md  beads-planner.md
src/: beads.rs  config.rs  main.rs  updater.rs  worktree.rs
src/cli/: mod.rs
src/db/: connection.rs  migrations.rs  mod.rs
src/indexer/: extractor.rs  mod.rs  parser.rs  types.rs
src/tools/: abort.rs  claim.rs  communication.rs  coordination.rs  list.rs  mod.rs  next.rs  release.rs  resolve.rs  session.rs  stale.rs  symbols.rs
src/tools/context/: global.rs  mod.rs  task.rs
tests/: integration.rs
